--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 'REL-ÉLECTRONIQUE POUR ESPACES IMMERSIFS'
+site_name: REL-ÉLECTRONIQUE POUR ESPACES IMMERSIFS
 site_description: 'Ressource éducative libre (REL) sur l'intégration de l'électronique aux espaces immersifs'
 site_author: 'Thomas O Fredericks et Guillaume Arseneault'
 docs_dir: docs/
