--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,4 +7,4 @@ repo_url: 'https://github.com/tim-montmorency/rel-electro-immersif'
 nav:
     - Home: index.md
 theme:
-  name: 'mkdocs'
+  name: 'material'
