Préparation à la publication V1

--- a/book.toml
+++ b/book.toml
@@ -1,5 +1,5 @@
 [book]
-tite = "Électronique pour espaces immersifs (REL)"
+tite = "Notes de cours sur l'intégration de l'électronique aux espaces immersifs"
 authors = ["Thomas O Fredericks", "Guillaume Arseneault"]
 language = "fr"
 multilingual = false
